[gd_scene load_steps=3 format=2]

[ext_resource path="res://Util/SexActivityCreator/StageSceneAnimPicker.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="StageSceneAnimPicker" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = -1.0
margin_right = 52.4
margin_bottom = 24.4
text = "Scene:"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
margin_left = 55.0
margin_right = 733.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 736.0
margin_top = -1.0
margin_right = 815.4
margin_bottom = 24.4
text = "Animation"

[node name="OptionButton2" type="OptionButton" parent="HBoxContainer"]
margin_left = 818.0
margin_right = 1157.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="HBoxContainer"]
margin_left = 1160.0
margin_top = -1.0
margin_right = 1194.4
margin_bottom = 24.4
text = "PC="

[node name="OptionButton3" type="OptionButton" parent="HBoxContainer"]
margin_left = 1197.0
margin_right = 1213.0
margin_bottom = 25.0

[node name="Label4" type="Label" parent="HBoxContainer"]
margin_left = 1216.0
margin_top = -1.0
margin_right = 1261.4
margin_bottom = 24.4
text = "NPC="

[node name="OptionButton4" type="OptionButton" parent="HBoxContainer"]
margin_left = 1264.0
margin_right = 1280.0
margin_bottom = 25.0

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="HBoxContainer/OptionButton2" to="." method="_on_OptionButton2_item_selected"]
[connection signal="item_selected" from="HBoxContainer/OptionButton3" to="." method="_on_OptionButton3_item_selected"]
[connection signal="item_selected" from="HBoxContainer/OptionButton4" to="." method="_on_OptionButton4_item_selected"]
